# Fay

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  SETUP.md  STATE.md
src/: app.js  apps.config.json  heart.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
