[package]
name = "fay"
version = "0.1.0"
description = "Fay — a minimal dark desktop launcher hub."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
